Automatically clean up and modernize Java code, step: restrictive